--- a/client/src/gosa/client/locale/de/LC_MESSAGES/messages.po
+++ b/client/src/gosa/client/locale/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gosa.client 1.0\n"
 "Report-Msgid-Bugs-To: gosa@oss.gonicus.de\n"
-"POT-Creation-Date: 2018-01-16 12:41+0100\n"
+"POT-Creation-Date: 2018-01-22 11:20+0100\n"
 "PO-Revision-Date: 2018-01-16 10:44+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: de\n"
@@ -25,30 +25,36 @@ msgstr ""
 #: src/gosa/client/session.py:98
 msgid "Cannot join client: check user name or password!"
 msgstr ""
+"Hinzufügen des Clients fehlgeschlagen: Überprüfen Sie den Benutzernamen "
+"oder das Passwort!"
 
 #: src/gosa/client/plugins/join/cli.py:31
 msgid "Please enter username and password to join the GOsa infrastructure."
 msgstr ""
+"Bitte geben Sie einen Benutzernamen und ein Passwort an, um den Client "
+"zur GOsa Infrastruktur hinzuzufügen."
 
 #: src/gosa/client/plugins/join/cli.py:32
 #, python-format
 msgid "User name [%s]: "
-msgstr ""
+msgstr "Benutzername [%s]: "
 
 #: src/gosa/client/plugins/join/cli.py:33
 msgid "Password"
-msgstr ""
+msgstr "Passwort"
 
 #: src/gosa/client/plugins/join/cli.py:37
 #: src/gosa/client/plugins/join/otp.py:33
 msgid "Error"
-msgstr ""
+msgstr "Fehler"
 
 #: src/gosa/client/plugins/join/methods.py:177
 msgid "Searching for service provider..."
-msgstr ""
+msgstr "Suche nach Service-Providern"
 
 #: src/gosa/client/plugins/join/methods.py:222
 msgid "Cannot join client: please provide a service URL!"
 msgstr ""
+"Hinzufügen des Clients fehlgeschlagen: Bitte geben Sie eine Service-URL "
+"an!"
 
