--- a/plugins/goto/src/gosa/plugins/goto/locale/messages.pot
+++ b/plugins/goto/src/gosa/plugins/goto/locale/messages.pot
@@ -1,22 +1,22 @@
-# Translations template for gosa-plugin-goto.
+# Translations template for gosa.plugins.goto.
 # Copyright (C) 2018 GONICUS GmbH
-# This file is distributed under the same license as the gosa-plugin-goto
+# This file is distributed under the same license as the gosa.plugins.goto
 # project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: gosa-plugin-goto 1.0\n"
+"Project-Id-Version: gosa.plugins.goto 3.0\n"
 "Report-Msgid-Bugs-To: gosa@oss.gonicus.de\n"
-"POT-Creation-Date: 2018-01-16 12:41+0100\n"
+"POT-Creation-Date: 2018-01-22 11:20+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 1.3\n"
+"Generated-By: Babel 2.5.3\n"
 
 #: src/gosa/plugins/goto/client_service.py:43
 #, python-format
@@ -120,7 +120,7 @@ msgid "Cleanup a user session after a user has logged out"
 msgstr ""
 
 #: src/gosa/plugins/goto/client_service.py:806
-msgid "Unbekannt"
+msgid "unknown"
 msgstr ""
 
 #: src/gosa/plugins/goto/client_service.py:829
