use status_code again but add own error message as reason to it, update some translations (rename several topic placeholders)

--- a/backend/src/gosa/backend/locale/de/LC_MESSAGES/messages.po
+++ b/backend/src/gosa/backend/locale/de/LC_MESSAGES/messages.po
@@ -2770,8 +2770,8 @@ msgstr ""
 
 #: src/gosa/backend/plugins/cups/main.py:41
 #, python-format
-msgid "User '%(topic)s' not found"
-msgstr "Benutzer '%(topic)s' nicht gefunden"
+msgid "User '%(user)s' not found"
+msgstr "Benutzer '%(user)s' nicht gefunden"
 
 #: src/gosa/backend/plugins/cups/main.py:42
 msgid ""
